# quakespasm-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  bin2c.cmake
.github/: extract_7z.py  extract_glslang  extract_vulkan-sdk_7z.py
.github/workflows/: continuous_integration.yml  submodules_status.yml
cmake/: FindFLAC.cmake  FindMPG123.cmake  FindMad.cmake  FindMikMod.cmake  FindOpus.cmake  FindSDL2.cmake  FindVorbis.cmake  FindXMP.cmake
patch/: pause-on-minimize.diff  secrets-ccmd.diff
patch/quakespasm/: secrets-ccmd.diff  secrets-monsters-ccmds.diff  weapon-rollover.diff
